--- a/policy2.html
+++ b/policy2.html
@@ -2546,7 +2546,7 @@ color:black'>Introduction and Your Agreement to this Privacy Policy:<o:p></o:p><
 
 <p class=MsoNormal><span lang=EN-US style='font-size:14.0pt;mso-bidi-font-size:
 7.5pt;line-height:120%;font-family:"Verdana","sans-serif";mso-fareast-font-family:
-宋体;mso-bidi-font-family:宋体;color:black'>HappyMobile.Ltd ("we," "us," "our,"
+宋体;mso-bidi-font-family:宋体;color:black'>Power By Love ("we," "us," "our,"
 or "Company") knows that you care about how your personal information is used and
 shared, and we take your privacy seriously.&nbsp;&nbsp;Please read the
 following to learn more about how we use your personal
@@ -2593,7 +2593,7 @@ Information</span></i><span lang=EN-US style='font-size:14.0pt;mso-bidi-font-siz
 
 <p class=MsoNormal><span lang=EN-US style='font-size:14.0pt;mso-bidi-font-size:
 7.5pt;line-height:120%;font-family:"Verdana","sans-serif";mso-fareast-font-family:
-宋体;mso-bidi-font-family:宋体;color:black'>HappyMobile may collect personal and
+宋体;mso-bidi-font-family:宋体;color:black'>Power By Love may collect personal and
 non-personal information from you when you use the Service. Personal
 information is information that specifically identifies an individual,
 including, but not limited to, an individual's name, phone number, credit card
@@ -2656,7 +2656,7 @@ href="https://unity3d.com/legal/privacy-policy"/a>https://unity3d.com/legal/priv
 
 <p class=MsoNormal><span lang=EN-US style='font-size:14.0pt;mso-bidi-font-size:
 7.5pt;line-height:120%;font-family:"Verdana","sans-serif";mso-fareast-font-family:
-宋体;mso-bidi-font-family:宋体;color:black'>In addition, HappyMobile may have
+宋体;mso-bidi-font-family:宋体;color:black'>In addition, Power By Love may have
 advertisements in its games regarding other applications or services that are
 served by third parties.<span style='mso-spacerun:yes'>&nbsp; </span>These
 third parties may collect and use information about you, including platform,
